Fix left side of collapsing row border
Fixes lineupjs/lineupjs#456

- Uses the updated code example from https://stackoverflow.com/a/28807765
- Modify the top border (= last box shadow part)

--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -1,4 +1,6 @@
 @mixin collapsing-row-border($border-width, $border-color) {
   // use box-shadow to create collapsing border (@see https://stackoverflow.com/a/28807765)
-  box-shadow: 0 0 0 $border-width $border-color;
+  box-shadow: $border-width 0 0 0 $border-color, 0 $border-width 0 0 $border-color,
+    $border-width $border-width 0 0 $border-color /* Just to fix the corner */, $border-width 0 0 0 $border-color inset,
+    0 0 0 $border-width $border-color;
 }
